--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
     - ROS_PARALLEL_JOBS='-j8 -l6'
   matrix:
-    - ROS_DISTRO=kinetic
+    - ROS_DISTRO=indigo
 
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
@@ -65,7 +65,7 @@ before_script:
 script:
   - cd ~/catkin_ws
   - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
-  # Testing: Use both run_tests (to see the output) and test (to error out).
+  # Testing: Use both run_tests (to see the output) and test (to error out).  
   - catkin_make run_tests  # This always returns 0, but looks pretty.
   - catkin_make test  # This will return non-zero if a test fails.
 
