update package.xml in order to make catkin_make detect
Former-commit-id: 3a9006ee6082ed27a60870c1ee9f2e90304bb0d9 [formerly fdb62c87575c3fb82f7a4b9a4cf29258db68b8c3]
Former-commit-id: 795545825d5e54c254eb2c2a5b77522360a4773e
Former-commit-id: af24b5a91d3cc36ad0e1056ca348f9519c2f55aa

--- a/cnrg_ntu_tb3/package.xml
+++ b/cnrg_ntu_tb3/package.xml
@@ -4,12 +4,20 @@
   <description>metapackage of cnrg_ntu_tb3</description>
   <maintainer email="edward17829991@gmail.com">Edward Chen</maintainer>
   <maintainer email="q253upng@gmail.com">Shih Hung Tseng</maintainer>
+  <maintainer email="cjerry1243@gmail.com">Jerry Chang</maintainer>
+  <maintainer email="mikecool77882000@gmail.com">YYLMike</maintainer>
+  <maintainer email="Rick_Cheng@to.do">Rick_Cheng</maintainer>
+  
   <license>TODO</license>
   
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>binaural_microphone</run_depend>
   <run_depend>realsense_rgbd_camera</run_depend>
+  <run_depend>acoustic_anomaly</run_depend>
+  <run_depend>ipem_module</run_depend>
+  <run_depend>keyboardIO</run_depend>
+  <run_depend>video_falling_detection</run_depend>
 
   <export>
     <metapackage/> 
