Fix packge.xml error and update
Former-commit-id: 4dc1cb36a0d19ec95ec1f53e0f67c32f47f87a68 [formerly bed4362191a9a79973737c4420b4ec8b7cf8b254]
Former-commit-id: 3b10b784df8d98e00f608da624ee242f3f9de340
Former-commit-id: ef6038f29c95ba9134019c3e6eca16fd6dae484c

--- a/cnrg_ntu_tb3/package.xml
+++ b/cnrg_ntu_tb3/package.xml
@@ -16,9 +16,10 @@
   <run_depend>realsense_rgbd_camera</run_depend>
   <run_depend>acoustic_anomaly</run_depend>
   <run_depend>ipem_module</run_depend>
-  <run_depend>keyboardIO</run_depend>
+  <run_depend>keyboard_io</run_depend>
   <run_depend>video_falling_detection</run_depend>
   <run_depend>tb3_demo</run_depend>
+  <run_depend>card_game</run_depend>
 
   <export>
     <metapackage/> 
