--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required 
 dist: trusty 
+services:
+  - docker
 language: generic 
 compiler:
   - gcc
@@ -11,11 +13,12 @@ notifications:
       - r03921064@ntu.edu.tw
 env:
   matrix:
-    - USE_DEB=true  ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - USE_DEB=true  ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="kinetic"   ROS_REPO=ros                    UPSTREAM_WORKSPACE=file  
+    - ROS_DISTRO="kinetic"   ROS_REPO=ros-shadow-fixed       UPSTREAM_WORKSPACE=file
 matrix:
   allow_failures:
-    - env: USE_DEB=true  ROS_DISTRO="kinetic"   ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - env: ROS_DISTRO="kinetic"   ROS_REPO=ros               UPSTREAM_WORKSPACE=file
+    - env: ROS_DISTRO="kinetic"   ROS_REPO=ros-shadow-fixed  UPSTREAM_WORKSPACE=file
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
 script: 
