--- a/binaural_microphone/package.xml
+++ b/binaural_microphone/package.xml
@@ -61,6 +61,7 @@
   <exec_depend>std_msgs</exec_depend>
 
   <depend>python-numpy</depend>
+  <depend>dynamic_reconfigure</depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
