--- a/turtlebot_follower_tracker/params/follower_tracker_params.yaml
+++ b/turtlebot_follower_tracker/params/follower_tracker_params.yaml
@@ -1,2 +1,3 @@
-camera_height: 1.347  #0.600
+base_link: camera_link
+camera_height: 0.595  #0.600
 following_range: [-0.7414, 0.2944, -3.64, 1.994, -3.61, -2.084, -0.7414, -0.3044]
